@@ -35,7 +35,7 @@ Transactions with the same name and <<transaction-type,type>> are grouped togeth
 
 [small]#Added in: v0.1.0#
 
-[small]#Split components into `type`, `subtype` and `action` in: v3.0.0# 
+[small]#Split components into `type`, `subtype` and `action` in: v3.0.0#
 
 * +{type-string}+ *Default:* `custom`
 
@@ -84,7 +84,7 @@ or e.g. "success" or "failure" for a background task.
 
 [small]#Added in: v2.0.0#
 
-[small]#Split `type` into `type`, `subtype` and `action` in: v3.0.0# 
+[small]#Split `type` into `type`, `subtype` and `action` in: v3.0.0#
 
 * `name` +{type-string}+ The name of the span.
 You can alternatively set this via <<span-name,`span.name`>>.
@@ -113,18 +113,19 @@ When a span is started it will measure the time until <<span-end,`span.end()`>> 
 See <<span-api,Span API>> docs for details on how to use custom spans.
 
 [[transaction-set-label]]
-==== `transaction.setLabel(name, value)`
+==== `transaction.setLabel(name, value[, stringify = true])`
 
-[small]#Added in: v0.1.0#
-
-[small]#Renamed from `transaction.setTag()` to `transaction.setLabel()`: v2.10.0#
+[small]#Added in: v0.1.0# +
+[small]#Renamed from `transaction.setTag()` to `transaction.setLabel()`: v2.10.0# +
+[small]#Added `stringify` argument in: v3.10.0#
 
 * `name` +{type-string}+
-Periods (`.`), asterisks (`*`), and double quotation marks (`"`) will be replaced by underscores (`_`),
+Any periods (`.`), asterisks (`*`), or double quotation marks (`"`) will be replaced by underscores (`_`),
 as those characters have special meaning in Elasticsearch
-* `value` +{type-string}+
-If a non-string data type is given,
-it's converted to a string before being sent to the APM Server
+* `value` +{type-string}+ | +{type-number}+ | +{type-boolean}+
+* `stringify` +{type-boolean}+
+Defaults to `true`. When true, if a non-string `value` is given, it is
+converted to a string before being sent to the APM Server
 
 Set a label on the transaction.
 You can set multiple labels on the same transaction.
@@ -134,19 +135,20 @@ it will also get tagged with the same labels.
 Tags are key/value pairs that are indexed by Elasticsearch and therefore searchable (as opposed to data set via <<apm-set-custom-context,`apm.setCustomContext()`>>).
 
 [[transaction-add-labels]]
-==== `transaction.addLabels({ [name]: value })`
+==== `transaction.addLabels({ [name]: value }[, stringify = true])`
 
-[small]#Added in: v1.5.0#
-
-[small]#Renamed from `transaction.addTags()` to `transaction.addLabels()`: v2.10.0#
+[small]#Added in: v1.5.0# +
+[small]#Renamed from `transaction.addTags()` to `transaction.addLabels()`: v2.10.0# +
+[small]#Added `stringify` argument in: v3.10.0#
 
 * `labels` +{type-object}+ Contains key/value pairs:
 ** `name` +{type-string}+
 Any periods (`.`), asterisks (`*`), or double quotation marks (`"`) will be replaced by underscores (`_`),
 as those characters have special meaning in Elasticsearch
-** `value` +{type-string}+
-If a non-string data type is given,
-it's converted to a string before being sent to the APM Server
+** `value` +{type-string}+ | +{type-number}+ | +{type-boolean}+
+* `stringify` +{type-boolean}+
+Defaults to `true`. When true, if a non-string `value` is given, it is
+converted to a string before being sent to the APM Server.
 
 Add several labels on the transaction.
 You can add labels multiple times.
