@@ -76,22 +76,32 @@ GenericSpan.prototype.duration = function () {
   return this._timer.duration
 }
 
-GenericSpan.prototype.setLabel = function (key, value) {
+// The 'stringify' option is for backward compatibility and will likely be
+// removed in the next major version.
+GenericSpan.prototype.setLabel = function (key, value, stringify = true) {
+  const makeLabelValue = () => {
+    if (!stringify && (typeof value === 'boolean' || typeof value === 'number')) {
+      return value
+    }
+
+    return truncate(String(value), config.INTAKE_STRING_MAX_SIZE)
+  }
+
   if (!key) return false
   if (!this._labels) this._labels = {}
   var skey = key.replace(/[.*"]/g, '_')
   if (key !== skey) {
     this._agent.logger.warn('Illegal characters used in tag key: %s', key)
   }
-  this._labels[skey] = truncate(String(value), config.INTAKE_STRING_MAX_SIZE)
+  this._labels[skey] = makeLabelValue()
   return true
 }
 
-GenericSpan.prototype.addLabels = function (labels) {
+GenericSpan.prototype.addLabels = function (labels, stringify) {
   if (!labels) return false
   var keys = Object.keys(labels)
   for (const key of keys) {
-    if (!this.setLabel(key, labels[key])) {
+    if (!this.setLabel(key, labels[key], stringify)) {
       return false
     }
   }
